fix: fixed width search input, fixed visibility menu-button

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -15,14 +15,16 @@
          padding-bottom: 30px
       &__search
          margin-left: auto
-         max-width: 340px
+         
       &-menu
          padding-top: 22px
          padding-bottom: 22px
          &__link
             font-size: 12px
             line-height: 15px
-
+   .search
+      &__input
+         width: 340px
 // Max-width 768px
 @media (max-width: 768px)
    .container
@@ -35,6 +37,7 @@
       &-button
          width: 16px
          height: 11px
+         padding: 0
          display: flex
          align-items: center
          justify-content: space-between
